# ChangeLog for app-text/html2text
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/html2text/ChangeLog,v 1.34 2009/03/19 13:41:39 flameeyes Exp $

*html2text-1.3.2-r1 (19 Mar 2009)

  19 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +html2text-1.3.2-r1.ebuild:
  Fix some obvious QA problems, always apply the 1.3.2a patch.

  27 Mar 2008; Jeroen Roovers <jer@gentoo.org> html2text-1.3.2.ebuild:
  Stable for HPPA too.

  11 Jan 2008; Fabian Groffen <grobian@gentoo.org> html2text-1.3.2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  12 Mar 2007; Leonardo Boshell <leonardop@gentoo.org> metadata.xml:
  Replacing text-markup herd with the new sgml herd.

  02 Mar 2007; <genstef@gentoo.org> -html2text-1.3.1.ebuild:
  Fix has_version syntax, bug 168892

  23 Feb 2007; Alexandre Buisse <nattfodd@gentoo.org>
  html2text-1.3.1.ebuild, html2text-1.3.2.ebuild:
  Updated HOMEPAGE (bug #167973).

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-html2text-1.3.1, files/digest-html2text-1.3.2, Manifest:
  Fixing SHA256 digest, pass four

  16 Mar 2006; Martin Ehmsen <ehmsen@gentoo.org> html2text-1.3.1.ebuild,
  html2text-1.3.2.ebuild:
  Don't install INSTALL, found by QA script.

  21 Feb 2006; Alexandre Buisse <nattfodd@gentoo.org>
  -files/html2text-gcc3.3.patch, html2text-1.3.1.ebuild:
  Moved html2text-gcc3.patch to mirror as it was >20k (bug #123634).

  16 Oct 2005; Fabian Groffen <grobian@gentoo.org>
  +files/html2text-1.3.2-compiler.patch,
  -files/html2text-1.3.2-darwin.patch, html2text-1.3.2.ebuild:
  Replacing darwin patch with compiler patch as per bug #105051.  Thanks to
  Arnaud Launay <asl [at} launey.org> for the patch.

  09 Sep 2005; Aron Griffis <agriffis@gentoo.org> html2text-1.3.2.ebuild:
  Mark 1.3.2 stable on alpha

  31 Aug 2005; Fabian Groffen <grobian@gentoo.org>