@@ -1,6 +1,6 @@
 AUX html2text-1.3.2-compiler.patch 344 RMD160 6e3737179d4ca689a3c4753dcb640ad3105243a5 SHA1 002dfc8c2639efd6ea1ac2e4990fb2d19fc9e566 SHA256 ca28a645dd6da7e5ebe7b9ee194b5e874487638852b3d270cfe8901f9bb4bf6f
 DIST html2text-1.3.2.tar.gz 131336 RMD160 10a5c4cf324302d6571abd28a8f0eebf26708750 SHA1 4ef3e6b30a2ac323693975da3ca8ce96013daa58 SHA256 15e458961ee168771d4e9fa4fd50e9b128ab40e7b530db5ce210178fa17dac44
 EBUILD html2text-1.3.2-r1.ebuild 918 RMD160 45ebf0aaed1055bc3c043607d243bb349d918423 SHA1 936f4eea5239e8cce5f791bb05431ec8d8dc9aa9 SHA256 7d9ffbbc3372877422e4ba336739644fd8bd1de5b1caed101f42b6462e736b16
-EBUILD html2text-1.3.2.ebuild 937 RMD160 d3bc8c2c903cc15d93449e438b9b8ec553665214 SHA1 2f5b0c9ec52e3c349036392b4df6266cd2721caa SHA256 8afad9b6733cd22f056b5c47b0142c5e7512db3f724778cc0fc53d7585b67e1c
-MISC ChangeLog 4396 RMD160 4b5856b9237be18c9fd7be0226e16dbc1e754c4b SHA1 54d770f392d2869d379f109e01f38aaafaa84213 SHA256 5d77df5364acf7e97418913051e9ff0d93226363d079ff88231c755511819fab
+EBUILD html2text-1.3.2.ebuild 929 RMD160 dc19e7bf1f1dbc02fec58494c4a28a7f6276bf46 SHA1 9a6af51f93315a38e6a5f236f50c17efb3ee9c21 SHA256 f3877966db12cde7cca585515e17c6d93aa8bdbce8babe8b2d167ccc4b5dd3d2
+MISC ChangeLog 4491 RMD160 0d6587022a4d531ad4477aa320ed8c01dcd73e16 SHA1 f559f6b96e8c05d3d1f8ff78edd4eb8e8e7d2d06 SHA256 559e71f19e7f7f59947fb02242c34a77c089ecdccbd0dd852be5501b17821166
 MISC metadata.xml 159 RMD160 a94e7b2c191d1593b8bc416d266571e001c2f673 SHA1 3c1d0831d8acacef390234d20d7711cabded861a SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3
