@@ -1,6 +1,9 @@
 # ChangeLog for app-text/html2text
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/html2text/ChangeLog,v 1.34 2009/03/19 13:41:39 flameeyes Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/html2text/ChangeLog,v 1.35 2009/09/23 16:35:01 patrick Exp $
+
+  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> html2text-1.3.2.ebuild:
+  Remove virtual/libc
 
 *html2text-1.3.2-r1 (19 Mar 2009)
 
